<?xml version="1.0"?>
<package format="2">
  <name>test_pkg</name>
  <version>0.1.0</version>
  <description>A simple ROS package for hello world</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Other package-specific information -->
</package>